Fix problem with document displaying on mobile devices (#177)

--- a/css/styled-content.less
+++ b/css/styled-content.less
@@ -377,7 +377,13 @@
             }
         }
     }
+    .document-block-iframe-wrapper {
+        max-height: 550px;        
+        -webkit-overflow-scrolling: touch;
+        overflow: auto;
+    }
     iframe.document-block-iframe {
+        display: block;
         border: 1px solid rgba(66, 81, 95, 0.1);
     }
     /*endregion*/
